--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="no">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/src/%VITE_FAVICON%" />
+    <link rel="icon" type="image/x-icon" href="/src/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fia</title>
   </head>
