Endret måten vi setter favicon til rød, så den får med riktige assets fra build.

--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/src/favicon.ico" />
+    <link rel="icon_default" type="image/x-icon" href="/src/favicon.ico" />
+    <link rel="icon_red" type="image/x-icon" href="/src/favicon_red.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fia</title>
   </head>
