--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/x-icon" href="/src/favicon.ico" />
     <link rel="icon_default" type="image/x-icon" href="/src/favicon.ico" />
     <link rel="icon_red" type="image/x-icon" href="/src/favicon_red.ico" />
+    <link rel="icon_rainbow" type="image/x-icon" href="/src/favicon_rainbow.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fia</title>
   </head>
